[metadata]
name = spike2py
version = 0.2.8
url = https://github.com/MartinHeroux/spike2py
author = Martin Heroux
author_email = "Martin Heroux" <heroux.martin@gmail.com>
description = "Import, parse and process data collected with Spike2".
long_description = file: README.md
long_description_content_type: text/markdown
license = GPLv3
license_files = LICENSE
classifiers = 
    License :: OSI approved :: GPLv3

[options]
package_dir = 
  =src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    numpy>=1.25.0,<2
    scipy>=1.10.0,<2
    matplotlib>=3.7.0,<4
    
[options.packages.find]
where = src

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
namespace_packages = True
check_untyped_defs = True
pretty = True

[flake8]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool:pytest]
testpaths = tests    
addopts = --cov --strict-markers
markers = 
    demo
xfail_strict = True
    
[coverage:run]
source = spike2py
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/spike2py
    */site-packages/spike2py
    
[tox:tox]
isolated_build = True
envlist = py311, py310

[testenv]
deps =
    pytest
    pytest-cov
    pytest-randomly
commands =
    pytest -m "not demo" {posargs}
    
[testenv:typecheck]
skip_install = True
deps =
    mypy
    pytest
commands =
    mypy --ignore-missing-imports {posargs:src tests}

[testenv:black]
skip_install = True
deps =
    black
commands =
    black {posargs: src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}

